Reduce h1 size to avoid wrapping on mac

--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ span.codedirection {
   }
 
   h1 {
-    font-size: 116px;
+    font-size: 115px;
   }
 
   .icons i{
